# gewellt-eight

./: .gitignore  CMakeLists.txt  README.md  chars-6tri.txt  chars-8tri.txt  demo-editor.cpp  gewellt.cpp  main.cpp  test.cpp
